fix(ui): resolve horizontal scroll issue in users datatable

--- a/resources/scss/layouts/_wrapper.scss
+++ b/resources/scss/layouts/_wrapper.scss
@@ -20,6 +20,7 @@
 }
 
 .content {
+    min-width: 0;
     grid-area: content;
 }
 
